<?xml version="1.0"?>
<package format="2">
    <name>eric_a_web</name>
    <version>0.0.0</version>
    <description>
        The eric_a robot web
    </description>
    <maintainer email="jeonghan@todo.todo">jeonghan</maintainer>
    <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>
</package>